...
    "AskedBycount": "Asked by {{viewCount}} other users",
    "Attribution": {
        "AppStore": "App Store/ Play Store",
        "Friend": "A friend",
        "Google": "Google",
        "Instagram": "Instagram",
        "Other": "Other",
        "Tiktok": "Tiktok"
    },
    "AttributionSource": {
        "Ad": "Through a {{attribution}} ad",
        "ForYouPage": "Organic video on my for you page",
        "Friend": "Friend shared it with me",
        "Search": "Searched for it"
    },
    "Confident": "Confident",
    "Continue": "Continue",
    "EducationJourneyMessage": "Where are you in your educational journey?",
    "Explanation": "Explanation",
    "GetStarted": "Get Started",
    "GoalUsingQuizardMessage": "What's your goal when using Quizard?",
    "Goals": {
        "BetterUnderstanding": "Gaining a better understanding of a topic",
        "DoubleChecking": "Double-checking my work",
        "Other": "Other",
        "QuickAssignments": "Getting assignments done quickly"
    },
    "HearAboutUsMessage": "Where did you hear about Quizard?",
    "HelpSubjectMessage": "What subjects do you need help with?",
    "HowDidYouFindUsMessage": "How did you find us on {{attribution}}?",
    "Loading": "Loading...",
    "MeetQuizard": "Meet Quizard",
    "MeetQuizardDescription": "Quizard utilizes the power of AI to get the answers you need at your fingertips.",
    "Minimize": "Minimize",
    "NoVisionWarning": {
        "continue": "Continue",
        "subtitle": "If you continue without the image we might get the question wrong",
        "title": "Warning",
...
        "linkButton": "Link your device",
        "screenTitle": "Chrome Extension"
    },
    "claimTokens": {
        "claim": "Claim",
        "claimed": "Claimed",
        "dismiss": "Dismiss",
        "title": "Tokens have been claimed"
    },
    "cropLayer": {
        "instruction": "Crop the question"
    },
    "customModel": {
...
        "errorTitle_errorGettingQuestion": "Error getting a question from the cropped picture",
        "errorTitle_gettingImage": "Error getting the image",
        "errorTitle_noQuestion": "No question found in the picture",
        "errorTitle_questionTooShort": "Question too short",
        "message": "Rate us on the App Store! Your feedback inspires us to work hard and make the app even better for you",
        "ok": "OK",
        "prompt_takePicture": "Take a picture of a question",
        "readingTask": "Reading Task",
        "title": "Quick favor?"
    },
    "leaveReview": "Leave a 5 \u2b50\ufe0f review",
    "loadingBar": {
        "answerComingMessage": "Your answer is on the way!",
...
        "dailyRefresher": "Daily Refresher",
        "discordJoin": "Join our Discord",
        "discountUnlock": "Unlock and save {{discount}}% \ud83d\udd13",
        "earn": "Earn",
        "enterReferral": "Enter\u00a0referral",
        "feature1": {
            "description": "Ask as many questions as you want",
            "title": "Unlimited Questions"
        },
        "feature2": {
            "description": "Get the most accurate answers",
            "title": "Confident Answers"
        },
        "feature3": {
            "description": "Access related resources on the web",
            "title": "Related Resources"
        },
        "feature4": {
            "description": "Ask as many follow-up questions as you want",
            "title": "Unlimited Follow-ups"
        },
        "feature5": {
            "description": "Ask questions with figures",
            "title": "Questions With Figures"
        },
        "freeUnlock": "Free {{discount}} Day Trial \ud83d\udd13",
        "freeUnlockAndroid": "Start Free {{discount}} Day Trial & Plan \ud83d\udd13",
        "instagramFollow": "Follow us on Instagram",
        "inviteFriends": "Invite Friends",
        "noClaimableItems": "No claimable items at this moment",
...
        "amazingGift": "You have an amazing gift",
        "backToSchoolGift": "We have a back to school gift for you!",
        "claimNow": "Claim your offer now!",
        "exitConfirmTitle": "This discount is a one-time offer. Are you sure you want to give up?",
        "finalsSeasonGift": "We have a finals season gift for you!",
        "giftDescription": "Get {{percent}}% off Quizard premium if you subscribe today!",
        "gitForYou": "We have a Gift for you!",
        "giveup": "Give up",
        "megaSale": "MEGA SALE",
        "monthlyValues": "Only <first>{{newPrice}}</first>/month <second>{{oldPrice}}</second>",
        "offerDescription": "Open it now and claim it before it's gone!",
        "openNow": "Open it now",
        "premium": "Quizard premium",
...
