...
                      width: 22,
                      height: 22
                    }} />
            </TouchableOpacity>
        </View>
        {!pro && <View style={styles.rightSettingsView}>
          <TouchableOpacity testID="pro-button" style={{...styles.coinsButtonView}} onPress={onConinbookPress} >
            <Image source={require("../../../assets/probook.png")} style={{ width: 16, height: 20}} />
            <Text style={styles.coinsText}>Pro</Text> 
          </TouchableOpacity>
          </View>
        }
    </View>
...
